# lawson-kiosk

./: .gitignore  LICENSE  README.md  deploy.sh  index.html  package-lock.json  package.json  shader.frag  tailwind.config.ts  tsconfig.app.json  vite.config.ts
public/: wiki.css
server/: admin.ts  db.ts  deno.json  main.ts
server/cpp/: .gitignore  CMakeLists.txt  main.cpp  pool.hpp  scc.hpp  tarjantest.cpp  wiki.cpp
src/: calendar.tsx  faculty.json  main.css  main.tsx  majors.tsx  map.tsx  mines.tsx  minestate.ts  server.d.ts  ui.tsx  util.ts  wiki.tsx  wikistate.ts
